help_files = [
  'clipboard.page',
  'connect.page',
  'continuous.page',
  'create.page',
  'delete.page',
  'disk-images.page',
  'index.page',
  'interface.page',
  'keystrokes.page',
  'legal.xml',
  'prop-system.page',
  'prop-trouble.page',
  'search.page',
  'shortcuts.page',
  'shutdown.page',
  'snapshot-create.page',
  'snapshot-delete.page',
  'snapshot-rename.page',
  'snapshot-revert.page',
  'supported-protocols.page',
  'system-requirements.page',
  'usb-redirection.page',
  'virtualization.page',
  'what-is-a-virtual-machine.page',
  'why-do-i-need-virtual-machine.page',
]

help_media = [
  'figures/boxes_icon.png',
  'figures/input-keyboard-symbolic.svg',
  'figures/open-menu-symbolic.svg'
]

help_linguas = [
  'cs',
  'de',
  'el',
  'es',
  'fr',
  'hu',
  'it',
  'ko',
  'pt_BR',
  'sv'
]

gnome.yelp (meson.project_name (),
            sources: help_files,
            media: help_media,
            languages: help_linguas,
            symlink_media: true,
)
