help_files = [
  '3d-acceleration.page',
  'backup.page',
  'create.page',
  'delete.page',
  'disk-images.page',
  'edit-domain.page',
  'index.page',
  'install-guest-agent.page',
  'interface.page',
  'keystrokes.page',
  'legal.xml',
  'prop-system.page',
  'prop-trouble.page',
  'search.page',
  'shared-folders.page',
  'shutdown.page',
  'snapshot-create.page',
  'snapshot-delete.page',
  'snapshot-rename.page',
  'snapshot-revert.page',
  'supported-protocols.page',
  'system-requirements.page',
  'usb-redirection.page',
  'virtualization.page',
  'what-is-a-virtual-machine.page',
  'why-do-i-need-virtual-machine.page',
]

help_media = [
  'figures/boxes_icon.svg',
  'figures/input-keyboard-symbolic.svg',
  'figures/view-more-symbolic.svg'
]

gnome.yelp (meson.project_name (),
            sources: help_files,
            media: help_media,
            symlink_media: true,
)
