NULL=

debiandir= $(datadir)/gnome-boxes/osinfo/os/debian.org
debian_DATA= debian-1.0.xml

fedoradir= $(datadir)/gnome-boxes/osinfo/os/fedoraproject.org
fedora_DATA= fedora-1.xml

opensusedir= $(datadir)/gnome-boxes/osinfo/os/opensuse.org
opensuse_DATA= opensuse-10.2.xml

ubuntudir= $(datadir)/gnome-boxes/osinfo/os/ubuntu.com
ubuntu_DATA= ubuntu-4.10.xml

gnomedir= $(datadir)/gnome-boxes/osinfo/os/gnome.org
gnome_DATA= gnome-3.6.xml

redhatdir= $(datadir)/gnome-boxes/osinfo/os/redhat.com
redhat_DATA= rhel-4.0.xml \
			 rhel-5.0.xml \
			 rhel-6.0.xml \
			 rhel-7.0.xml \
			 $(NULL)

EXTRA_DIST = $(debian_DATA)	 \
			 $(fedora_DATA)	 \
			 $(opensuse_DATA) \
			 $(ubuntu_DATA)	 \
			 $(gnome_DATA)	 \
			 $(redhat_DATA)	 \
			 meson.build	\
			 $(NULL)
