vala_sources += files( 
  'assistant-page.vala',
  'downloadable-entry.vala',
  'downloads-page.vala',
  'identify-os-page.vala',
  'identify-os-popover.vala',
  'index-page.vala',
  'media-entry.vala',
  'os-downloader.vala',
  'preparation-page.vala',
  'review-page.vala',
  'rhel-download-dialog.vala',
  'setup-page.vala',
  'vm-assistant.vala'
)
