NULL =

# This is the directory where we put upstream vapi bindings when they
# are outdated and we need a version with additional fixes.
EXTRA_DIST =					\
	clutter-1.0.deps			\
	clutter-1.0.vapi			\
	clutter-gtk-1.0.deps			\
	clutter-gtk-1.0.vapi			\
	cogl-1.0.deps				\
	cogl-1.0.vapi				\
	gdk-3.0.deps				\
	gdk-3.0.vapi				\
	gtk+-3.0.deps				\
	gtk+-3.0.vapi				\
	gdk-pixbuf-2.0.deps			\
	gdk-pixbuf-2.0.vapi			\
	$(NULL)

-include $(top_srcdir)/git.mk
