NULL =

# This is the directory where we put upstream vapi bindings when they
# are outdated and we need a version with additional fixes.
EXTRA_DIST =					\
	gdk-3.0.deps				\
	gdk-3.0.vapi				\
	gtk+-3.0.deps				\
	gtk+-3.0.vapi				\
	gdk-pixbuf-2.0.deps			\
	gdk-pixbuf-2.0.vapi			\
	$(NULL)

-include $(top_srcdir)/git.mk
